<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/RemoveActionBar"
    tools:context=".SecondFragmentFrag" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/signup_imageLogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="107dp"
        android:src="@drawable/logo_app_f"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/signup_textPassword"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="472dp"
        android:gravity="top"
        android:text="@string/password"
        android:textAppearance="@style/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_enterPassword"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="422dp"

        android:background="@drawable/back_wh"
        android:fontFamily="@font/nunito"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingStart="19dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/signup_btnSignup"
        style="@style/log_in"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="46dp"
        android:background="@drawable/back_blue"
        android:layout_marginTop="500dp"
        android:elevation="4dp"
        android:fontFamily="@font/nunito"
        android:text="@string/cont"
        android:textAppearance="@style/log_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="578dp"
        android:src="@drawable/_or_"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/signup_btnGoogle"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="46dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/google_signup"
        android:elevation="4dp"
        android:fontFamily="@font/nunito"
        android:textAppearance="@style/log_in"
        android:textColor="#999999"
        android:textSize="17sp"
        app:backgroundTint="@null"
        android:layout_marginTop="627dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/signup_btnBack"
        style="@style/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="Already have an account? Log in"
        android:layout_marginTop="703dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/signup_enterEmail"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"
        android:background="@drawable/back_wh"
        android:fontFamily="@font/nunito"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingStart="19dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/signup_textEmail"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="284dp"
        android:fontFamily="@font/roboto"
        android:gravity="top"
        android:text="@string/email"
        android:textAppearance="@style/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_enterName"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="360dp"
        android:background="@drawable/back_wh"
        android:fontFamily="@font/nunito"
        android:hint="@string/hint_name"
        android:inputType="textPassword"
        android:paddingStart="19dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/signup_textName"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:gravity="top"
        android:text="@string/name"
        android:textAppearance="@style/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_textSimpletime"
        android:layout_width="260dp"
        android:layout_height="51dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="237dp"
        android:fontFamily="@font/nunito"
        android:gravity="center_horizontal|top"
        android:text="@string/sign_up"
        android:textAppearance="@style/simpletime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>